<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="viewModel"
            type="mota.dev.happytesting.ViewModel.CreateAppViewModel"/>
    </data>
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mota.dev.happytesting.Views.fragments.CreateAppFragment"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_desktop_primary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Crea una Aplicacion"
                android:textColor="@color/accentText"
                android:textSize="25sp"
                android:padding="7dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>


        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:padding="7dp"
            android:background="@drawable/rounded_rectangle"
            android:ems="10"
            android:hint="Nombre de la Aplicacion"
            android:inputType="textPersonName"

            android:text="@={viewModel.name}"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_users_primary"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Selecciona los editores"
                android:padding="7dp"
                android:textColor="@color/accentText"
                android:textSize="25sp" />
        </LinearLayout>


        <android.support.v4.widget.SwipeRefreshLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="7dp"
            >

            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" />
        </android.support.v4.widget.SwipeRefreshLayout>
        <Button
            android:id="@+id/button2"
            android:text="Crear"
            style="@style/simpleButton"
            android:onClick="@{viewModel::create}"/>

    </LinearLayout>
</layout>
