<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="mota.dev.happytesting.ViewModel.detail.DetailAppViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:text="@{viewModel.app_name}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_user_primary"/>
                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{viewModel.app_owner}"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_users_primary"/>
                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Editores"
                    android:textColor="@color/accentText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

            </LinearLayout>


            <android.support.v4.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipeContainer2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                >
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/editors_list"/>
            </android.support.v4.widget.SwipeRefreshLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_book_primary"/>
                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:text="Reportes"
                    android:layout_height="match_parent"
                    android:textColor="@color/accentText"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    />

            </LinearLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="54"
                >
                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:id="@+id/reports_list"/>
            </android.support.v4.widget.SwipeRefreshLayout>

        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/material_design_android_floating_action_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            fab:menu_animationDelayPerItem="55"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="@color/colorPrimary"
            fab:menu_colorPressed="@color/colorPrimary"
            fab:menu_colorRipple="@color/accentText"
            fab:menu_fab_label="Cerrar Menu"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333"
            fab:menu_labels_colorPressed="#444"
            fab:menu_labels_colorRipple="#66efecec"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_textColor="#f2f1f1"
            fab:menu_labels_textSize="15sp"
            fab:menu_openDirection="up"
            fab:menu_shadowColor="#66aff198"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="4dp"
            fab:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/material_design_floating_action_menu_item1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_users"
                fab:fab_label="Agregar Editor"
                fab:fab_size="normal"
                android:onClick="@{viewModel::agregarEditor}"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_colorPressed="@color/colorPrimary"
                fab:fab_colorRipple="@color/accentText"
                android:background="@color/colorPrimary"
                android:padding="5dp"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/material_design_floating_action_menu_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_trash"
                fab:fab_label="Eliminar Aplicacion"
                fab:fab_size="normal"
                android:onClick="@{viewModel::eliminarApp}"
                fab:fab_colorNormal="@color/colorPrimary"
                fab:fab_colorPressed="@color/colorPrimary"
                fab:fab_colorRipple="@color/accentText"
                android:background="@color/colorPrimary"
                android:padding="5dp"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/material_design_floating_action_menu_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@mipmap/ic_plus"
                fab:fab_label="Agregar Reporte"
                fab:fab_size="normal"
                android:onClick="@{viewModel::agregarReporte}"
                fab:fab_colorPressed="@color/colorPrimary"
                fab:fab_colorRipple="@color/accentText"
                fab:fab_colorNormal="@color/colorPrimary"/>
        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

</layout>
